@@ -1281,6 +1281,11 @@ public final class AuthenticationConstants {
         public static final String BROKER_GENERATE_SHR_RESULT = "broker_generate_shr_result";
 
         /**
+         * String for QR + PIN result.
+         */
+        public static final String IS_QR_PIN_AVAILABLE = "is_qr_pin_available";
+
+        /**
          * String to return a true if the request succeeded, false otherwise.
          */
         public static final String BROKER_REQUEST_V2_SUCCESS = "broker_request_v2_success";
@@ -1556,7 +1561,9 @@ public final class AuthenticationConstants {
             BROKER_DISCOVERY_FROM_SDK(BROKER_DISCOVERY_FROM_SDK_PATH, null, null),
             BROKER_DISCOVERY_SET_ACTIVE_BROKER(BROKER_DISCOVERY_SET_ACTIVE_BROKER_PATH, null, null),
             PASSTHROUGH(PASSTHROUGH_PATH, null, null),
-            BROKER_INDIVIDUAL_LOGS_UPLOAD(BROKER_INDIVIDUAL_LOGS_UPLOAD_PATH, null, null),;
+            READ_RESTRICTIONS_MANAGER(READ_RESTRICTIONS_MANAGER_PATH, null, null),
+            IS_QR_PIN_AVAILABLE(IS_QR_PIN_AVAILABLE_PATH, null, null),
+            BROKER_INDIVIDUAL_LOGS_UPLOAD(BROKER_INDIVIDUAL_LOGS_UPLOAD_PATH, null, null);
 
             /**
              * The content provider path that the API exists behind.
@@ -1689,6 +1696,16 @@ public final class AuthenticationConstants {
          * Broker api path constant for adding flight information.
          */
         public static final String GET_SSO_TOKEN_PATH = "/ssoToken";
+
+        /**
+         * ContentProvider path to check if QR + PIN should de available.
+         */
+        public static final String IS_QR_PIN_AVAILABLE_PATH = "/isQrPinAvailable";
+
+        /**
+         * ContentProvider path to read the restrictions manager.
+         */
+        public static final String READ_RESTRICTIONS_MANAGER_PATH = "/readRestrictionsManager";
 
         /**
          * Broker api path constant for execute device registration protocols.
