@@ -74,6 +74,8 @@ public class BrokerOperationBundle {
         BROKER_DISCOVERY_FROM_SDK(API.BROKER_DISCOVERY_FROM_SDK, null),
         BROKER_DISCOVERY_SET_ACTIVE_BROKER(API.BROKER_DISCOVERY_SET_ACTIVE_BROKER, null),
         PASSTHROUGH(API.PASSTHROUGH, null),
+        BROKER_READ_RESTRICTIONS_MANAGER(API.READ_RESTRICTIONS_MANAGER, null),
+        MSAL_IS_QR_PIN_AVAILABLE(API.IS_QR_PIN_AVAILABLE, null),
         BROKER_INDIVIDUAL_LOGS_UPLOAD(API.BROKER_INDIVIDUAL_LOGS_UPLOAD, null);
       
         final API mContentApi;
