@@ -27,10 +27,12 @@ import android.text.TextUtils;
 import androidx.annotation.NonNull;
 import androidx.annotation.WorkerThread;
 
+import com.microsoft.identity.common.internal.broker.BrokerData;
 import com.microsoft.identity.common.java.configuration.LibraryConfiguration;
 import com.microsoft.identity.common.java.controllers.CommandDispatcher;
 import com.microsoft.identity.common.java.eststelemetry.PublicApiId;
 import com.microsoft.identity.common.java.exception.ArgumentException;
+import com.microsoft.identity.common.java.exception.BrokerRequiredException;
 import com.microsoft.identity.common.java.exception.ClientException;
 import com.microsoft.identity.common.java.exception.ErrorStrings;
 import com.microsoft.identity.common.java.exception.ServiceException;
@@ -507,6 +509,24 @@ public class LocalMSALController extends BaseController {
         );
 
         return localRemoveAccountSuccess;
+    }
+
+    /**
+     * Checks if QR + PIN auth is available.
+     * LocalMSALController is not eligible to use the broker.
+     * Do not check if QR + PIN is available and return false immediately.
+     *
+     * @return true false
+     */
+    @Override
+    public boolean isQrPinAvailable() throws BrokerRequiredException {
+        final String methodTag = TAG + ":isQrPinAvailable";
+        final BrokerRequiredException exception = new BrokerRequiredException(
+                BrokerData.getProdMicrosoftAuthenticator().getPackageName(),
+                null
+        );
+        Logger.error(methodTag, "QR + PIN not available. Requires broker.", exception);
+        throw exception;
     }
 
     @Override
