@@ -32,6 +32,7 @@ import static com.microsoft.identity.common.adal.internal.AuthenticationConstant
 import static com.microsoft.identity.common.adal.internal.AuthenticationConstants.Broker.BROKER_RESULT_V2_COMPRESSED;
 import static com.microsoft.identity.common.adal.internal.AuthenticationConstants.Broker.HELLO_ERROR_CODE;
 import static com.microsoft.identity.common.adal.internal.AuthenticationConstants.Broker.HELLO_ERROR_MESSAGE;
+import static com.microsoft.identity.common.adal.internal.AuthenticationConstants.Broker.IS_QR_PIN_AVAILABLE;
 import static com.microsoft.identity.common.adal.internal.AuthenticationConstants.Broker.NEGOTIATED_BP_VERSION_KEY;
 import static com.microsoft.identity.common.internal.util.GzipUtil.compressString;
 import static com.microsoft.identity.common.java.exception.ClientException.INVALID_BROKER_BUNDLE;
@@ -815,5 +816,22 @@ public class MsalBrokerResultAdapter implements IBrokerResultAdapter {
         );
 
         return shrResult;
+    }
+
+    /**
+     * Checks if the provided {@link Bundle} contains a key indicating that the broker is capable of QR code + PIN auth.
+     *
+     * @param bundle The {@link Bundle} to check.
+     * @return True if the broker is capable of QR code + PIN auth, false otherwise.
+     * @throws BaseException If the bundle does not contain the key.
+     */
+    public boolean getIfQrPinIsAvailableFromResultBundle(@Nullable final Bundle bundle) throws BaseException {
+        if (bundle == null) {
+            throw getExceptionForEmptyResultBundle();
+        }
+        if (!bundle.containsKey(IS_QR_PIN_AVAILABLE)) {
+            throw new MsalBrokerResultAdapter().getBaseExceptionFromBundle(bundle);
+        }
+        return bundle.getBoolean(IS_QR_PIN_AVAILABLE);
     }
 }
